  (Thomas Refis, review by Alain Frisch)

- #8872: Add ocamlc option "-output-complete-exe" to build a self-contained
  binary for bytecode programs, containing the runtime and C stubs.
  (Stéphane Glondu, Nicolás Ojeda Bär, review by Jérémie Dimino and Daniel
  Bünzli)

- #8891: Warn about unused functor parameters
  (Thomas Refis, review by Gabriel Radanne)

- #9046: disable warning 30 by default
  This outdated warning complained on label/constructor name conflicts
  within a mutually-recursive type declarations; there is now no need
  to complain thanks to type-based disambiguation.
  (Gabriel Scherer)

### Build system:

- #8840: use ocaml{c,opt}.opt when available to build internal tools
  On my machine this reduces parallel-build times from 3m30s to 2m50s.
  (Gabriel Scherer, review by Xavier Leroy and Sébastien Hinderer)

- #8650: ensure that "make" variables are defined before use;
  revise generation of config/util.ml to better quote special characters
  (Xavier Leroy, review by David Allsopp)

- #8690, #8696: avoid rebuilding the world when files containing primitives
  change.
  (Stephen Dolan, review by Gabriel Scherer, Sébastien Hinderer and
   Thomas Refis)

- #8835: new configure option --disable-stdlib-manpages to disable building
  and installation of the library manpages.
  (David Allsopp, review by Florian Angeletti and Gabriel Scherer)

- #8837: build manpages using ocamldoc.opt when available
  cuts the manpages build time from 14s to 4s
  (Gabriel Scherer, review by David Allsopp and Sébastien Hinderer,
   report by David Allsopp)

- #8843, #8841: fix use of off_t on 32-bit systems.
  (Stephen Dolan, report by Richard Jones, review by Xavier Leroy)

- #8947: fix/improve support for the BFD library
  (Sébastien Hinderer, review by Damien Doligez)

- #8951: let make's default target build the compiler
  (Sébastien Hinderer, review by David Allsopp)

- #8985, #8986: fix generation of the primitives when the locale collation is