@@ -299,6 +299,9 @@ Working version
 - #8891: Warn about unused functor parameters
   (Thomas Refis, review by Gabriel Radanne)
 
+- #8903: Improve errors for first-class modules
+  (Leo White, review by Jacques Garrigue)
+
 - #9046: disable warning 30 by default
   This outdated warning complained on label/constructor name conflicts
   within a mutually-recursive type declarations; there is now no need
